# lxdesktop

./: AUTHORS  BUGS  README  TODO  configure.ac  lxdesktop.geany
data/: desktop.noname.settings.gschema.xml  lxdesktop.desktop
data/ui/: README  desktop-settings.glade
docs/: FileManagers.odt  LibFmCore.odt  LxDesktop.odt
docs/source-docs/: docs-fileinfo.c
src/: Application.vala  DesktopConfig.vala  DesktopGrid.vala  DesktopItem.vala  DesktopWindow.vala  Makefile.am  ManagerTEMP2.vala  ManagerWindow.vala  TEMP.vala  TEMP_GRID.vala  Utils.vala  misc.c
src/Common/: DesktopConfig.vala  DesktopFilePopup.vala  DesktopPopup.vala  DesktopVolumeMonitor.vala  OptionsParser.vala  Utils.vala  debug.h  xlib.c
src/Desktop/: DesktopGrid.vala  DesktopGroup.vala  DesktopItem.vala  DesktopSettingsDialog.vala  DesktopSettingsXML.vala  DesktopWindow.vala  background.c  background.h
src/FileManager/: ManagerGroup.vala  ManagerWindow.vala
src/FileManager/View/: BaseView.vala  ForegroundProcessDialog.vala  TerminalWidget.vala  ViewContainer.vala  ViewTab.vala  ViewTerminal.vala
src/FileManager/View/Folder/: FolderView.vala
src/FileManager/View/Search/: FmSearchView.vala  SearchView.vala
src/FileManager/View/Terminal/: TerminalCloseDialog.vala  TerminalView.vala
src/Misc/: OptionsParser.vala  PreferencesDialog.vala
src/TEMP/: ManagerActions.vala  ManagerTEMP.vala  ManagerTEMP2.vala  TEMP.vala  TEMP_DesktopGrid.vala  TEMP_DesktopSettingsDialog.vala  TEMP_DesktopWindow.vala  TEMP_DesktopWindow_GTK2.vala  TEMP_LibFm_SidePane.vala  TEMP_ManagerActions.vala  TEMP_ManagerWindow.vala  TEMP_ManagerWindow_OLD.vala  TEMP_PreferredApplications_XML.vala
src/gtk/: TEMP.c  fm-cell-renderer-text.c  fm-dir-tree-item.c  fm-dir-tree-item.h  fm-dir-tree-model.c  fm-dir-tree-model.h  fm-dir-tree-view.c  fm-dir-tree-view.h  fm-folder-model.c  fm-folder-model.h  fm-folder-view.c  fm-folder-view.h  fm-path-entry.c
src/gtk/exo/: exo-icon-view.c  exo-icon-view.h  exo-lxde.c  exo-lxde.h  exo-private.c  exo-private.h  exo-tree-view.c
vapi/: fm-gtk.vapi  libfmcore-temp.vapi  libfmcore.vapi  vconfig.vapi
